--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,26 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+# .gitignore
 .DS_Store
+node_modules
+dist
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+.env.*.local
 npm-debug.log*
+yarn.lock
 yarn-debug.log*
 yarn-error.log*
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+public/video
+*.zip
+*.7z
+/src/layouts/components/zx-layouts
+/zx-templates
+/package-lock.json
+/src/styles/themes/green.scss
+/src/styles/themes/dark.scss
+/src/styles/themes/glory.scss
+/.history
